--- a/tugas6.html
+++ b/tugas6.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAUNA INDONESIA</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/x-icon" href="images/Indonesia.ico"/link>
+  <link rel="icon" type="image/x-icon" href="Indonesia.ico"/link>
  
   </head>
   <body>
